tests/textual/error/nullList-no-force.uplc
(program 0.0.0 [(builtin nullList) (con list(integer) [ 1, 2, 3 ])])